--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,32 @@ services:
   main_db:
     image: mongo:5.0.9
     container_name: main_db
+    restart: always
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: pegadaian
     ports:
       - 27017:27017
     volumes:
-      - ./database/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo-js:ro
+      - ./database/init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - main_db:/data/db
+  mongo_viewer:
+    image: mongo-express:1.0.0-alpha.4
+    container_name: mongo_viewer
+    restart: always
+    environment:
+      ME_CONFIG_BASICAUTH_USERNAME: root
+      ME_CONFIG_BASICAUTH_PASSWORD: root
+      ME_CONFIG_MONGODB_PORT: 27017
+      ME_CONFIG_MONGODB_ADMINUSERNAME: coba
+      ME_CONFIG_MONGODB_ADMINPASSWORD: coba
+    ports:
+    - "8081:8081"
+    links:
+    - main_db
+    depends_on:
+    - main_db
 
 volumes:
   main_db:
