--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
         "classnames": "^2.3.1",
         "export-from-json": "^1.4.1",
         "html-react-parser": "^1.2.8",
+        "moment": "^2.29.4",
         "nouislider-react": "^3.4.1",
         "quill": "1.3.6",
         "react": "^17.0.2",
