setup sidebar dan navbar

--- a/web/package.json
+++ b/web/package.json
@@ -1,55 +1,74 @@
 {
-  "name": "nuxt-starter-pack",
-  "version": "1.0.0",
-  "description": "Vue/Nuxt starter pack",
-  "author": "Aleksey Pleshkov <im@alekseypleshkov.ru>",
+  "name": "Pegadaian",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@nuxtjs/axios": "5.9.7",
-    "axios": "0.19.2",
-    "nuxt": "2.12.2",
-    "nuxt-social-meta": "0.0.1",
-    "pug-plain-loader": "1.0.0",
-    "v-img": "0.2.0",
-    "vue-form-send": "0.2.3",
-    "vue-lazyload": "1.3.3",
-    "vue-scroll-focus": "0.0.2",
-    "vue-scroll-show": "0.1.4",
-    "vue-scrollto": "2.18.1",
-    "vue-the-mask": "0.11.1",
-    "vue2-touch-events": "2.2.1"
+    "bootstrap-vue": "^2.23.1",
+    "core-js": "^3.8.3",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "babel-eslint": "10.0.2",
-    "eslint": "6.8.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-loader": "4.0.0",
-    "eslint-plugin-html": "6.0.2",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "4.0.1",
-    "postcss-adaptive-size": "0.2.2",
-    "postcss-apply": "0.12.0",
-    "postcss-calc": "7.0.2",
-    "postcss-color-function": "4.1.0",
-    "postcss-custom-media": "7.0.8",
-    "postcss-custom-properties": "9.1.1",
-    "postcss-flex-short": "1.2.0",
-    "postcss-inject": "1.0.2",
-    "postcss-nested": "4.2.1",
-    "postcss-nested-ancestors": "2.0.0",
-    "postcss-pxtorem": "5.1.1",
-    "postcss-responsive-type": "1.0.0",
-    "pug": "2.0.4",
-    "pug-loader": "2.4.0"
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-unit-jest": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^1.1.3",
+    "@vue/vue2-jest": "^27.0.0-alpha.2",
+    "babel-jest": "^27.0.6",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^27.0.5",
+    "prettier": "^2.8.4",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
+    "vue-template-compiler": "^2.6.14"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended",
+      "plugin:prettier/recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {},
+    "overrides": [
+      {
+        "files": [
+          "**/__tests__/*.{j,t}s?(x)",
+          "**/tests/unit/**/*.spec.{j,t}s?(x)"
+        ],
+        "env": {
+          "jest": true
+        }
+      }
+    ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ],
+  "jest": {
+    "preset": "@vue/cli-plugin-unit-jest"
   }
 }
