--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,14 +1,23 @@
-# dependencies
+.DS_Store
 node_modules
-yarn.lock
-package-lock.json
+/dist
 
-# logs
-npm-debug.log
-yarn-error.log
 
-# Nuxt build
-.nuxt
+# local env files
+.env.local
+.env.*.local
 
-# Nuxt generate
-dist
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
