--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "feather-icons": "^4.29.0",
+    "moment": "^2.29.4",
     "vue": "^2.6.14",
+    "vue-multi-step-form": "^0.1.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
