--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,8 @@
     "vue": "^2.6.14",
     "vue-multi-step-form": "^0.1.0",
     "vue-router": "^3.5.1",
+    "vue-select": "^3.20.2",
+    "vue2-datepicker": "^3.11.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
