--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "vue-multi-step-form": "^0.1.0",
     "vue-router": "^3.5.1",
     "vue-select": "^3.20.2",
+    "vue-sweetalert2": "^5.0.5",
     "vue2-datepicker": "^3.11.1",
     "vuex": "^3.6.2"
   },
