--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,8 @@
     "core-js": "^3.8.3",
     "feather-icons": "^4.29.0",
     "moment": "^2.29.4",
+    "number-to-words": "^1.2.4",
+    "terbilang-js": "^1.0.1",
     "vue": "^2.6.14",
     "vue-multi-step-form": "^0.1.0",
     "vue-router": "^3.5.1",
